# handyman

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCH.md  DECISIONS.md  Dockerfile  EVALS.md  PROJECT_STATE.md  README.md  RUNBOOK.md  SECURITY.md  alembic.ini  docker-compose.yml  eval_thresholds.yaml  pyproject.toml
alembic/: env.py
app/: main.py
chatbot/: api_client.py  components.py  config.py  main.py  pages.py  state.py
docker/: chatbot.Dockerfile  host.Dockerfile  model_server.Dockerfile  nginx-widget.conf  vault-init.sh  widget.Dockerfile
docs/: CHATBOT_CODE_REVIEW_NOTES.md  CHATBOT_TRACK_REPORT.md  CLASSIFIER_TRACK_REPORT.md  MEMORY_TRACK_REPORT.md  PROJECT_BRIEF_CANONICAL.md  PROJECT_BRIEF_VALIDATION.md  WIDGET_TRACK_REPORT.md
host/: index.html
ml/: classical_baseline.py  classifier_config.py  clean_processed_splits.py  count_clean_single_target.py  create_classification_golden_candidates.py  create_strict_text_splits.py  eda_labels.py  fetch_clean_support.py  fetch_dataset.py  finalize_classification_golden.py  finetune.py  llm_baseline.py  make_classifier_figures.py  make_eda_figures.py  make_three_way_classifier_comparison.py  split_dataset.py  text_preprocessing.py
model_server/: classifier.py  config.py  main.py  schemas.py
notebooks/: 00_reports_map.py  01_classifier_experiments_review.py  02_rag_retrieval_review.py  README.md  dataset_review.py
prompts/: chat_system.md  llm_baseline_classifier.md
reports/: README.md  artifact_manifest.json  classifier_three_way_comparison.csv  classifier_three_way_comparison.json  (+2 more)
(+148 files in other folders)
