[project]
name = "handyman"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "hvac>=2.3.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "structlog>=24.1.0",
    "accelerate>=1.1.0",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.5.0",
    "transformers>=4.41.0",
    "datasets>=2.19.0",
    "torch>=2.3.0",
]
chatbot = [
    "streamlit>=1.35.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "model_server*"]
exclude = [
    "alembic*",
    "tests*",
    "scripts*",
    "ml*",
    "rag*",
    "evals*",
    "chatbot_streamlit*",
    "widget*",
    "demo*",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
